k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-nodeport
  namespace: dev
  labels:
    app: devops-demo
spec:
  type: NodePort
  selector:
    app: devops-demo
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
